--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="position-relative overflow-hidden p-3 p-sm-2 m-sm-2 text-center custom-header">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 font-weight-normal" id="header-front">
-          Ahoj. Volám sa Jozef. Dizajnujem a vytváram webové stránky na mieru. 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         </h1>
       </div>
     </div>
